--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-			<ul>
-				<li><a href="/">home</a></li>
-				<li><a href="/">me</a></li>
-				<li><a href="/">cv</a></li>
-				<li><a href="/">pr</a></li>
-			</ul>
-			</nav>
-			<div class="container">
-			{{ content }}
-			</div>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-			<footer>
-				<ul>
-					<li><a href="/">mail</a></li>
-					<li><a href="/">github</a></li>
-					<li><a href="/">linkedin</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+  {% include head.html %}
 
+  <body>
+
+    {% include header.html %}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+
+    {% include footer.html %}
+
+  </body>
+
+</html>
