--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,5 +60,6 @@
   {% endif %}
 
   {% include fonts.html %}
-  {% include google_analytics.html %}
+  {% include bootstrap_stuff.html %}
+
 </head>
