--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,36 +4,7 @@
 
     <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light navbar fixed-top navbar-light bg-light">
-  <a class="navbar-brand" href="/">terran</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      {% for link in site.data.navigation.main %}
-        {% if link.url contains "http" %}
-          {% assign url = link.url %}
-        {% else %}
-          {% assign url = link.url | relative_url %}
-        {% endif %}
-        {% if link.url == page.url %}
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url }}">{{ link.title }}</a>
-        </li>
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url }}">{{ link.title }}</a>
-        </li>
-        {% endif %}
-        
-      {% endfor %}
-    </ul>
-   
-  </div>
-</nav>
-
-   <!--  <nav class="site-nav">
+    <nav class="site-nav">
       {% for link in site.data.navigation.main %}
         {% if link.url contains "http" %}
           {% assign url = link.url %}
@@ -42,7 +13,7 @@
         {% endif %}
         <a class="page-link" href="{{ url }}">{{ link.title }}</a>
       {% endfor %}
-    </nav> -->
+    </nav>
 
   </div>
 
