--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,16 +4,33 @@
 
     <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-    <nav class="site-nav">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <a class="navbar-brand" href="#">itemic</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
       {% for link in site.data.navigation.main %}
         {% if link.url contains "http" %}
           {% assign url = link.url %}
         {% else %}
           {% assign url = link.url | relative_url %}
         {% endif %}
-        <a class="page-link" href="{{ url }}">{{ link.title }}</a>
+        {% if link.url == page.url %}
+        <li class="nav-item active">
+        <a class="nav-link" href="{{ url }}">{{ link.title }}</a>
+      </li>
+        {% else %}
+        <li class="nav-item">
+        <a class="nav-link" href="{{ url }}">{{ link.title }}</a>
+      </li>
+        {% endif %}
+        
+
       {% endfor %}
-    </nav>
+    </ul>
+  </div>
 
   </div>
 
