--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,7 +12,7 @@ layout: default
 
 <div class="home">
   <ul class="card-columns post-archives">
-{% for post in paginator.posts %}
+{% for post in site.posts %}
       {% capture post_lang %}{{ post.lang | default: site_lang }}{% endcapture %}
       {% capture lang %}{% if post_lang != site_lang %}{{ post_lang }}{% endif %}{% endcapture %}
       <li class="card">
@@ -25,7 +25,7 @@ layout: default
     {% endfor %}
 
   </ul>
-{% if paginator.total_pages > 1 %}
+<!-- {% if paginator.total_pages > 1 %}
 
 <nav>
   <ul class="pagination pagination-sm justify-content-center">
@@ -51,7 +51,7 @@ layout: default
     </li>
   </ul>
 </nav>
-{% endif %}
+{% endif %} -->
 
 
 </div>
