Update project page with VOXSpell details.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,62 +1,140 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include header.html %}
+  {% include header.html %}
 
-<!-- <div class="wrapper"> -->
-        <div class="container-fluid full-width">
-          <div class="voxspell-bg">
-            <h1>VOXSpell</h1>
-            <div class="row">
+  <div class="container-fluid full-width">
+    <!-- VOXSPELL -->
+    <div class="bg bg-bright">
+      <h2 class="typography-header">VOXSpell</h2>
+      <h4 class="typography-sub">Spelling practice application</h4>
 
-              <div class="col-sm">
-                <p>VOXSpell is a spelling practice application made using Java and JavaFX. It runs on macOS and makes use of the built-in speech library. It also runs on Linux with the Festival speech library installed. VOXSpell is fully customizable and supports custom word lists.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <p>VOXSpell was developed as the final project for SOFTENG 206.</p>
-                <a href="https://github.com/itemic/voxspell"><button  type="button" class="btn btn-primary voxspell-btn">Visit on GitHub</button></a>
-              </div>
-            </div>
-          </div>
+      <div class="row">
+        <div class="col">
+          <p>University project</p>
 
-          <div class="revilo-bg">
-            <h1> Task Scheduler (Revilo)</h1>
+          <!-- <a href="https://github.com/itemic/voxspell"><button  type="button" class="btn btn-primary voxspell-btn">Visit on GitHub</button></a> -->
+          <p>
+            <a class="" data-toggle="collapse" href="#voxspell-more" role="button" aria-expanded="false" aria-controls="voxspell-more">
+             Learn more
+           </a>
+         </p>
 
-              <div class="col">
-                <p>Revilo is a task scheduler, which takes tasks given in the form of a DAG and outputs the optimal schedule on a specified number of processors, using a branch-and-bound algorithm. This project was done in Java, and the GUI was designed using the JavaFX GUI framework.</p>
-
-            </div>
-
-            <div class="row">
-              <div class="col">
-            <img src="/assets/revilo-logo.png" height="50"> <br>
-            Screenshots and more to be added at a later date...
-          </div>
-            </div>
-
-            <div class="row">
-
-              <div class="col">
-                <p>Revilo was developed as the final project for SOFTENG 306.</p>
-                This project has not been made public.
-              </div>
-
-            </div>
-          </div>
+       </div>
+     </div>
+     <div class="collapse collapsable" id="voxspell-more">
+      <div class="row">
+        <div class="col-md-9 col-sm-12 align-self-center" style="text-align: justify;">
+          <h4 class="typography-sub">About VOXSpell</h4>
+          <h6 class="typography-hero">VOXSpell is a spelling practice application made using Java and JavaFX. It runs on macOS and makes use of the built-in speech library. It also runs on Linux with the Festival speech library installed. VOXSpell is fully customizable and supports custom word lists.</h6>
+          <h6>VOXSpell was developed as the final project for SOFTENG 206 (a second-year design course) at the University of Auckland</h6>
+        </div>
+        <div class="col-md-3 col-sm-12">
+          <img src="/assets/screenshots/vs2.png"  style="max-width: 400px;">
+        </div>
       </div>
-      <!-- </div> -->
-   
 
-    {% include footer.html %}
+      <div class="row">
+              <div class="col-md-3 col-sm-6">
+                <h4 class="typography-header-short">10</h4>
+                <h6 class="typography-hero">Soundtracks to unlock</h6>
+                <br>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <h4 class="typography-header-short">1200+</h4>
+                <h6 class="typography-hero">Words included</h6>
+                <br>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <h4 class="typography-header-short">∞</h4>
+                <h6 class="typography-hero">Replayability</h6>
+                <br>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <h4 class="typography-header-short">2nd</h4>
+                <h6 class="typography-hero">In-class ranking</h6>
+                <br>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 col-sm-6">
+                <h4 class="typography-header-short">39</h4>
+                <h6 class="typography-hero">Preset levels</h6>
+                <br>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <h4 class="typography-header-short">3+</h4>
+                <h6 class="typography-hero">Statistical measures</h6>
+                <br>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <h4 class="typography-header-short">2</h4>
+                <h6 class="typography-hero">Exciting game modes</h6>
+                <br>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <h4 class="typography-header-short">10</h4>
+                <h6 class="typography-hero">Words per round</h6>
+                <br>
+              </div>
+            </div>
+
+      <!-- <div class="col-lg-9 col-md-12 col-sm-12 align-self-center" style="text-align: left"> -->
+        <div class="row">
+          <div class="col-md-3 col-sm-12">
+            <img src="/assets/screenshots/vs1.png"  style="max-width: 400px;">
+          </div>
+          <div class="col-md-9 col-sm-12 align-self-center" style="text-align: justify;">
+            <h4 class="typography-sub">Download VOXSpell</h4>
+          <h6 class="typography-hero">The source code of VOXSpell has been made public and can be found on <a href="https://github.com/itemic/voxspell">GitHub</a>.</h6>
+          <h4 class="typography-sub">Report and manual</h4>
+          <h6 class="typography-hero">In addition to the source code, the deliverables also included a report and user manual. That, along with the JAR file will be uploaded soon.</h6>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- REVILO -->
+<div class="bg bg-dark">
+  <h2 class="typography-header">Revilo</h2>
+  <h4 class="typography-sub">Task scheduling application</h4>
+
+  <div class="col">
+    <p>Revilo is a task scheduler, which takes tasks given in the form of a DAG and outputs the optimal schedule on a specified number of processors, using a branch-and-bound algorithm. This project was done in Java, and the GUI was designed using the JavaFX GUI framework.</p>
+
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <img src="/assets/revilo-logo.png" height="50"> <br>
+      Screenshots and more to be added at a later date...
+    </div>
+  </div>
+
+  <div class="row">
+
+    <div class="col">
+      <p>Revilo was developed as the final project for SOFTENG 306.</p>
+      This project has not been made public.
+    </div>
+
+  </div>
+</div>
+</div>
+
+
+{% include footer.html %}
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-  </body>
+</body>
 
 </html>
