--- a/css/main.css
+++ b/css/main.css
@@ -7,39 +7,26 @@
 	padding-right: 0;
 }
 
-.revilo-bg {
-	/*margin-left: 30px;*/
-	/*margin-right: 30px;*/
-	padding-top: 50px;
-	padding-bottom: 100px;
-	padding-left: 30px;
-	padding-right: 30px;
-	/*height: 50vh;*/
+.bg {
+	text-align: center;
+	padding-top: 15px;
+	padding-bottom: 15px;
 	width: 100%;
 	display: block;
 	overflow-y: scroll;
-	background-color: #F7FBFF;
+}
+
+.bg-bright {
+	
+	/*background-color: #F5F4F5;*/
+	background: -webkit-linear-gradient(top, #f5f4f5 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
 	color: black;
-	text-align: center;
 
 }
 
-.voxspell-bg {
-	/*margin-left: 30px;*/
-	/*margin-right: 30px;*/
-	font-family: Roboto, sans-serif;
-	padding-top: 100px;
-	padding-bottom: 100px;
-	padding-left: 30px;
-	padding-right: 30px;
-	/*height: 50vh;*/
-	width: 100%;
-	display: block;
-	overflow-y: scroll;
-	background-color: #2D2C2C;
+.bg-dark {
+	background-color: #161616;
 	color: white;
-	text-align: center;
-
 }
 
 .voxspell-btn {
@@ -50,3 +37,44 @@
 	min-width: 88;
 	padding: 0 16 0 16;
 }
+
+.collapsable {
+	padding-left: 100px;
+	padding-right: 100px;
+
+}
+
+.typography-header {
+	font-size: 56px;
+	font-weight: 500;
+    font-family: "SF Pro Display","SF Pro Icons";
+}
+
+.typography-header-short {
+	font-size: 64px;
+	line-height: 0.8;
+	font-weight: 500;
+    font-family: "SF Pro Display","SF Pro Icons";
+}
+
+.typography-sub {
+	font-size: 24px;
+	font-weight: 400;
+	font-family: "SF Pro Display","SF Pro Icons";
+}
+
+.typography-hero {
+	font-size: 22px;
+	font-weight: 300;
+}
+
+/*img {
+	height: auto;
+	width: auto;
+	max-height: 600px;
+}*/
+
+/*#carouselExampleControls.carousel.slide {
+    width: 600px; 
+    /*max-width: 600px; !important*/
+}*/
