--- a/static/style.css
+++ b/static/style.css
@@ -1,24 +1,25 @@
 /* Animations */
 @keyframes switch {
-  0%  {opacity: 1;}
-  /*25% {opacity: 0.5;}*/
+  0%  {opacity: 0;}
+  10% {opacity: 0.9;}
   50% {opacity: 1;}
-  /*75% {opacity: 0.5;}*/
-  100% {opacity: 1;}
+  90% {opacity: 0.9;}
+  100% {opacity: 0;}
 }
 
-html, body, #container, #wrap, .main {
+html, body, .main {
   /*height: 100%;*/
-      background-color: var(--color-dark);
+      /*background-color: var(--color-dark);*/
       /*background-color: green;*/
+      /*background-color: #F9F9F9;*/
 }
 
-div {
+/*div {
   margin: 0;
-}
+}*/
 
 html, body {
-  height: 100%;
+  /*height: 100%;*/
   --accent-color: #8a8a8a;
   --text-color: #000;
   --nav-text-color: #f2f2f2;
@@ -40,8 +41,8 @@ html, body {
 
 
 #container {
-  background-color: var(--color-dark);
-    color: white;
+  /*background-color: var(--color-dark);*/
+    /*color: b;*/
 }
 
 body, button {
@@ -53,21 +54,28 @@ body, button {
   width: 100%;
   --nav-height: 3rem;
   text-align: center;
-  background-color: rgba(50, 50, 50, 0.8);
-  /*opacity: 0.95;*/
   line-height: var(--nav-height);
   position: fixed;
+
   -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  z-index: 50;
 }
 
 .nav-light {
   background-color: rgba(255, 255, 255, 0.8);
-  -webkit-backdrop-filter: blur(10px);
-  /*opacity: 1;*/
+}
+
+.nav-dark {
+  background-color: rgba(50, 50, 50, 0.8);
+}
+
+.wrap {
+  padding-top: 3rem
 }
 
 .content {
-  padding-top: 3rem;
+  /*padding-top: 2rem;*/
   /*text-align: center;*/
 }
 
@@ -75,6 +83,7 @@ body, button {
 
 .title-header {
   font-size: 4rem;
+  margin-top: 0rem;
   margin-bottom: -.5rem;
   font-weight: 600;
 }
@@ -84,8 +93,8 @@ body, button {
   font-weight: 800;
 }
 .subtitle-header {
-  font-size: 1.5rem;
-  font-weight: 400;
+  font-size: 2rem;
+  font-weight: 300;
 }
 
 #static {
@@ -108,15 +117,20 @@ a {
 }
 
 p {
-  font-size: 17px;
+  font-size: 1.25rem;
   font-weight: 400;
-  font-family: "SF Pro Text", "SF Pro Icons";
-  letter-spacing: -0.021em;
-  line-height: 1.5;
+  letter-spacing: 0.01em;
+  line-height: 1.25;
+}
+
+body {
+  font-weight: 400;
+  font-size: 1.25rem;
 }
 
 .text-block {
-  padding: 0 10% 0 10%;
+  padding: 2.5% 10% 2.5% 10%;
+  /*display: block*/
 }
 #whoami.run {
   animation: switch 4s 1;
@@ -133,7 +147,6 @@ p {
 }
 .nav li {
   display: inline-block;
-  font-family: "SF Pro Text";
   font-size: 1rem;
   padding: 0 0.5rem;
   font-weight: 400;
