--- a/static/style.css
+++ b/static/style.css
@@ -231,3 +231,10 @@ p {
   height: 6rem;
   background: var(--color-blue-green);
 }
+
+/* INSTAGRAM */
+.ig {
+background: radial-gradient(circle at 1% 100%, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
