Add projects page

--- a/static/style.css
+++ b/static/style.css
@@ -203,11 +203,15 @@ p {
 }
 
 .construction {
-  padding: 0 0% 0% 0%;
   text-align: center;
-  padding-top: 2vh;
-  padding-bottom: 2vh;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
   display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  /*position: -webkit-sticky;*/
 }
 
 .content {
@@ -234,7 +238,39 @@ p {
 
 /* INSTAGRAM */
 .ig {
-background: radial-gradient(circle at 1% 100%, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+  background: radial-gradient(circle at 1% 100%, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+/* PROJECTS */
+.projects-scroll {
+    display: block;
+    text-align: center;
+    padding: 2.5% 2.5% 2.5% 2.5%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    font-size: 1.5rem;
+    color: var(--color-blue-green);
+    
+  }
+
+
+  .pill-back {
+    position: absolute;
+    top: 12.5vh;
+    letter-spacing: 0.06em;
+    font-weight: 400;
+    font-size: 1rem;
+    background-color: var(--color-blue-green);
+    color: white;
+    padding: 0.2% 0.5% 0.2% 0.5%;
+    border-radius: 20px;
+  }
+
+
+
+
+
