--- a/static/style.css
+++ b/static/style.css
@@ -271,6 +271,43 @@ p {
   }
 
 
+/* GRID STUFF */
+
+.grid-container {
+
+  
+  /* Supports Grid */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(450px, auto));
+  grid-auto-rows: auto;
+  grid-gap: 2.5em;
+}
+
+.grid-item {
+  /*background-color: var(--color-dark);*/
+  background: linear-gradient(top, #f5f4f5 0%,#ffffff 100%);
+  background: -webkit-linear-gradient(top, #ffffff 0%,#f5f4f5 100%);
+  color: black;
+  /*background: #eaeaea;*/
+  /*display: flex;*/
+  align-items: center;
+  justify-content: center;
+  padding: 2.5% 4% 0% 4%;
+  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 25px;
+  transition: opacity 0.2s ease, background 0.6s ease, box-shadow 0.2s ease;
+  vertical-align: text-top;
+
+/*https://medium.com/@hugodesigns/how-to-create-apple-app-store-cards-with-html-js-261a3225724a*/
+  
+ 
+}
+
+.grid-item:hover {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    background: -webkit-linear-gradient(top, #f5f4f5 0%,#ffffff 100%);
+
+}
 
 
 
