--- a/static/style.css
+++ b/static/style.css
@@ -238,7 +238,7 @@ p {
 
 /* INSTAGRAM */
 .ig {
-  background: radial-gradient(circle at 1% 100%, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+  background: radial-gradient(circle at 0% 100%, rgb(255, 179, 14) 0%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
